--- a/style.css
+++ b/style.css
@@ -21,11 +21,19 @@ body {
   font-family: "Mulish", sans-serif;
   font-weight: normal;
   padding-top: 20px;
+  width: 100%;
 }
-#add-book-button {
-  margin-left: 1090px;
-  height: 50px;
+
+#button-container {
+  margin-left: 500px;
+  display: flex;
+  flex-direction: row;
+}
+
+.header-button {
+  margin: 10px;
   margin-top: 30px;
+  height: 50px;
   border-radius: 0;
   font-family: "Mulish", sans-serif;
   font-weight: bolder;
