--- a/style.css
+++ b/style.css
@@ -33,11 +33,32 @@ body {
 .header-button {
   margin: 10px;
   margin-top: 30px;
-  height: 50px;
   border-radius: 0;
   font-family: "Mulish", sans-serif;
   font-weight: bolder;
   cursor: pointer;
+  background-color: #f7e6c3;
+  border-color: #997226;
+}
+
+.header-button:hover {
+  transform: scale(0.9);
+}
+
+#add-book-button {
+  font-size: 30px;
+  height: 50px;
+  width: 75px;
+  border-radius: 50%;
+  border: none;
+  background-color: #f7e6c3;
+  text-align: center;
+  border: 3px solid #997226;
+  padding-bottom: 10px;
+}
+
+#add-book-button:hover {
+  transform: scale(0.9);
 }
 
 /* FORM STYLING */
@@ -185,4 +206,25 @@ body {
 
 .card-pages {
   font-size: 15px;
+}
+
+/* FOOTER */
+footer {
+  display: flex;
+  align-content: flex-end;
+  justify-content: flex-end;
+  font-family: "M PLUS 1p", sans-serif;
+  font-weight: 100;
+  padding: 4px;
+}
+
+footer > span > a {
+  color: black;
+}
+
+#flex-wrapper {
+  display: flex;
+  min-height: 80vh;
+  flex-direction: column;
+  justify-content: space-between;
 }
