--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap");
 
-body {
+.body {
   margin: 0;
   padding: 0;
   font-family: "Mulish", sans-serif;
+}
+
+.body-no-scroll {
+  overflow: hidden;
 }
 
 /* HEADER STYLING */
@@ -63,7 +67,7 @@ body {
 
 /* FORM STYLING */
 
-#form-wrapper {
+.form-wrapper {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -71,6 +75,11 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
   display: none;
+  z-index: 1;
+}
+
+.form-wrapper-visible {
+  display: block;
 }
 
 #form-container {
