--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 /* HEADER STYLING */
-#library-header {
+.library-header {
   display: flex;
   justify-content: flex-start;
   flex-direction: row;
@@ -21,14 +21,14 @@
   width: 100%;
   margin-bottom: 20px;
 }
-#header-heading {
+.header-heading {
   font-family: "Mulish", sans-serif;
   font-weight: normal;
   padding-top: 20px;
   width: 100%;
 }
 
-#button-container {
+.button-container {
   margin-left: 500px;
   display: flex;
   flex-direction: row;
@@ -49,7 +49,7 @@
   transform: scale(0.9);
 }
 
-#add-book-button {
+.add-book-button {
   font-size: 30px;
   height: 50px;
   width: 75px;
@@ -61,7 +61,7 @@
   padding-bottom: 10px;
 }
 
-#add-book-button:hover {
+.add-book-button:hover {
   transform: scale(0.9);
 }
 
@@ -82,7 +82,7 @@
   display: block;
 }
 
-#form-container {
+.form-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -98,7 +98,7 @@
   margin-top: 7rem;
 }
 
-#cancel-input {
+.cancel-input {
   position: absolute;
   top: 0;
   right: 0;
@@ -113,7 +113,7 @@
   border-bottom-left-radius: 3px;
 }
 
-#new-book-form {
+.new-book-form {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -132,11 +132,11 @@
   color: black;
 }
 
-#read-book-span {
+.read-book-span {
   margin-bottom: 40px;
 }
 
-#submit-book-button {
+.submit-book-button {
   border-radius: 0px;
   position: absolute;
   right: 0;
@@ -155,7 +155,7 @@
 
 /* CARD STYLING */
 
-#cards-container {
+.cards-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
 }
@@ -229,7 +229,7 @@
 }
 
 /* FOOTER */
-footer {
+.footer {
   display: flex;
   align-content: flex-end;
   justify-content: flex-end;
@@ -238,11 +238,11 @@ footer {
   padding: 4px;
 }
 
-footer > span > a {
+.footer > span > a {
   color: black;
 }
 
-#flex-wrapper {
+.flex-wrapper {
   display: flex;
   min-height: 82vh;
   flex-direction: column;
